--- a/about_me/index.html
+++ b/about_me/index.html
@@ -8,30 +8,33 @@
 	<meta name="theme-color" content="#494f5c">
 	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="About Me">
-<meta itemprop="description" content="I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at water polo practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things.">
+<meta itemprop="description" content="I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at water polo practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things.
+You can reach me via email at mlee43@nd.edu">
 
-<meta itemprop="wordCount" content="53">
+<meta itemprop="wordCount" content="61">
 
 
 
 <meta itemprop="keywords" content="" /><meta property="og:title" content="About Me" />
-<meta property="og:description" content="I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at water polo practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things." />
+<meta property="og:description" content="I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at water polo practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things.
+You can reach me via email at mlee43@nd.edu" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://mlee43.me/about_me/" />
+<meta property="og:url" content="https://www.mlee43.me/about_me/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About Me"/>
-<meta name="twitter:description" content="I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at water polo practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things."/>
+<meta name="twitter:description" content="I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at water polo practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things.
+You can reach me via email at mlee43@nd.edu"/>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="">
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://www.mlee43.me/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://www.mlee43.me/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://www.mlee43.me/favicon-16x16.png">
+	<link rel="manifest" href="https://www.mlee43.me/site.webmanifest">
+	<link rel="mask-icon" href="https://www.mlee43.me/safari-pinned-tab.svg" color="">
+	<link rel="shortcut icon" href="https://www.mlee43.me/favicon.ico">
 
 	<title>About Me</title>
-	<link rel="stylesheet" href="https://mlee43.me/css/style.min.657bcb7af31123e4156b1a3d2ff60a636717e54ead74f882136b5114cf72b55e.css" integrity="sha256-ZXvLevMRI+QVaxo9L/YKY2cX5U6tdPiCE2tRFM9ytV4=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://www.mlee43.me/css/style.min.657bcb7af31123e4156b1a3d2ff60a636717e54ead74f882136b5114cf72b55e.css" integrity="sha256-ZXvLevMRI+QVaxo9L/YKY2cX5U6tdPiCE2tRFM9ytV4=" crossorigin="anonymous">
 	
 </head>
 
@@ -41,13 +44,13 @@
 		<div class="hdr-wrapper section-inner">
 			<div class="hdr-left">
 				<div class="site-branding">
-					<a href="https://mlee43.me">Michael Lee</a>
+					<a href="https://www.mlee43.me">Michael Lee</a>
 				</div>
 				<nav class="site-nav hide-in-mobile">
 					
-				<a href="https://mlee43.me/blog/">Blog</a>
-				<a href="https://mlee43.me/about_me/">About Me</a>
-				<a href="https://mlee43.me/projects/">Projects</a>
+				<a href="https://www.mlee43.me/blog/">Blog</a>
+				<a href="https://www.mlee43.me/about_me/">About Me</a>
+				<a href="https://www.mlee43.me/projects/">Projects</a>
 
 				</nav>
 			</div>
@@ -58,9 +61,9 @@
 	</header>
 	<div id="mobile-menu" class="animated fast">
 		<ul>
-			<li><a href="https://mlee43.me/blog/">Blog</a></li>
-			<li><a href="https://mlee43.me/about_me/">About Me</a></li>
-			<li><a href="https://mlee43.me/projects/">Projects</a></li>
+			<li><a href="https://www.mlee43.me/blog/">Blog</a></li>
+			<li><a href="https://www.mlee43.me/about_me/">About Me</a></li>
+			<li><a href="https://www.mlee43.me/projects/">Projects</a></li>
 		</ul>
 	</div>
 
@@ -69,20 +72,21 @@
 		<h1>About Me</h1>
 		<div class="content">
 			<p>I am an undergraduate Computer Science major at the University of Notre Dame, graduating in 2022. When I am not in class or doing homework you can most likely find me at <a href="http://sites.nd.edu/waterpolo/">water polo</a> practice, reading, or writing. I am a very dedicated, hardworking individual and am always eager to learn new things.</p>
+<p>You can reach me  via  email at <a href="mailto:mlee43@nd.edu">mlee43@nd.edu</a></p>
 
 		</div>
 	</main>
 
 	<footer id="site-footer" class="section-inner thin animated fadeIn faster">
-		<p>&copy; 2020 <a href="https://mlee43.me">Michael Lee</a> &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></p>
+		<p>&copy; 2020 <a href="https://www.mlee43.me">Michael Lee</a> &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></p>
 		<p>
-			Made with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> &#183; Theme <a href="https://github.com/Track3/hermit" target="_blank" rel="noopener">Hermit</a> &#183; <a href="https://mlee43.me/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a>
+			Made with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> &#183; Theme <a href="https://github.com/Track3/hermit" target="_blank" rel="noopener">Hermit</a> &#183; <a href="https://www.mlee43.me/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a>
 		</p>
 	</footer>
 
 
 
-	<script src="https://mlee43.me/js/bundle.min.4a9a0ac3d2217822c7865b4161e6c2a71de1d70492264337755427898dd718f6.js" integrity="sha256-SpoKw9IheCLHhltBYebCpx3h1wSSJkM3dVQniY3XGPY=" crossorigin="anonymous"></script>
+	<script src="https://www.mlee43.me/js/bundle.min.4a9a0ac3d2217822c7865b4161e6c2a71de1d70492264337755427898dd718f6.js" integrity="sha256-SpoKw9IheCLHhltBYebCpx3h1wSSJkM3dVQniY3XGPY=" crossorigin="anonymous"></script>
 	
 
 </body>
